<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="DetailActivity"
    tools:showIn="@layout/activity_detail">

    <ImageView
        android:id="@+id/img_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/image_document"
        android:padding="@dimen/padding_large"
        android:src="@drawable/ic_document"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_close"
        app:layout_constraintTop_toBottomOf="@id/img_header">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/layout_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            app:layoutDescription="@xml/scene_details"
            tools:showPaths="true">

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/file_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="label_fileName,label_downloadStatus" />

            <TextView
                android:id="@+id/label_fileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_fileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/loadApp_option" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginVertical="@dimen/margin_normal"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@id/label_downloadStatus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_fileName" />

            <TextView
                android:id="@+id/label_downloadStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_small"
                android:text="@string/status"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/tv_downloadStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/download_completed" />
        </androidx.constraintlayout.motion.widget.MotionLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_extra_small"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/close"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
